WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207674
REGRESSION (
r255037
): Zooming in and out on Quip in macOS Safari can cause the content to be offset to the side
https://bugs.webkit.org/show_bug.cgi?id=207674
Summary
REGRESSION (r255037): Zooming in and out on Quip in macOS Safari can cause th...
Simon Fraser (smfr)
Reported
2020-02-12 19:08:25 PST
REGRESSION (
r255037
): Zooming in and out on Quip in macOS Safari can cause the content to be offset to the side
Attachments
Patch
(8.29 KB, patch)
2020-02-12 19:11 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-02-12 19:11:06 PST
Created
attachment 390609
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-02-12 19:11:08 PST
<
rdar://problem/59404866
>
WebKit Commit Bot
Comment 3
2020-02-13 09:20:47 PST
Comment on
attachment 390609
[details]
Patch Clearing flags on attachment: 390609 Committed
r256513
: <
https://trac.webkit.org/changeset/256513
>
WebKit Commit Bot
Comment 4
2020-02-13 09:20:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug